vlib/v/checker/tests/import_sym_builtin_override_err.vv
import rand { f64 }

type Dot = [3]f64
